# devops-ai-poc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ci-smoke.txt  docker-compose.yml  trust.json
.github/workflows/: ci-cd.yml  ci.yml
k8s/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
monitoring/: prometheus.yml
src/: lib.rs  main.rs
src/handlers/: health.rs  predict.rs
src/metrics/: middleware.rs  mod.rs  prometheus.rs
src/models/: ml_model.rs  mod.rs
terraform/environments/dev/: .terraform.lock.hcl  main.tf
terraform/modules/eks-cluster/: main.tf  variables.tf
tests/: integration_tests.rs  unit_tests.rs
